kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
name: chat-svc
namespace: user-<USERNAME>
spec:
selector:
app: chat
ports:
- protocol: TCP
port: 80
targetPort: 8080
type: ClusterIP
